--- a/apache2/Dockerfile
+++ b/apache2/Dockerfile
@@ -5,6 +5,8 @@ LABEL maintainer="oriol.amat@gmail.com"
 RUN apt-get update
 RUN apt-get install -y apache2 
 
+COPY html /var/www/html
+
 EXPOSE 80
 
 CMD ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
