--- a/apache2/Dockerfile
+++ b/apache2/Dockerfile
@@ -7,6 +7,10 @@ RUN apt-get install -y apache2
 
 COPY html /var/www/html
 
+ENV variable_entorno contenido_variable_entorno
+
+RUN echo "$variable_entorno" > var/www/html/var_env.html
+
 EXPOSE 80
 
 CMD ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
