--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,7 +1,9 @@
-FROM mysql
+FROM mongo
 
 LABEL maintainer="oriol.amat@gmail.com"
 LABEL version="1.0"
 LABEL description="mysql image test"
 
-EXPOSE 3306
+
+EXPOSE 27017
+
