--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -2,7 +2,7 @@ FROM mongo
 
 LABEL maintainer="oriol.amat@gmail.com"
 LABEL version="1.0"
-LABEL description="mysql image test"
+LABEL description="mongo image test"
 
 
 EXPOSE 27017
